# raw-clusterer

./: .gitignore  AGENTS.md  INSTALL.md  README.md  TODO.md  pyproject.toml
.claude/: settings.local.json
docs/: XMP_SPECIFICATION.md
scripts/: README.md  setup_test_data.py
scripts/tests/: test_clustering.py  test_full_pipeline.py  test_nested_dir.py  test_single.py  test_xmp_generation.py
src/application/dto/: cluster_result.py
src/application/use_cases/: cluster_images.py  extract_features.py  generate_thumbnails.py  organize_raw_images.py  update_xmp_metadata.py
src/domain/models/: cluster.py  embedding.py  raw_image.py  thumbnail.py  xmp_metadata.py
src/domain/repositories/: cluster_repository.py  embedding_repository.py  raw_image_repository.py  thumbnail_repository.py  xmp_repository.py
src/domain/services/: clustering_service.py  feature_extraction_service.py
src/infrastructure/cache/: cache_manager.py
src/infrastructure/converters/: raw_to_jpeg_converter.py
src/infrastructure/file_system/: directory_scanner.py
src/infrastructure/ml/clustering/: hdbscan_clusterer.py  kmeans_clusterer.py
src/infrastructure/ml/models/: resnet_model.py
src/infrastructure/repositories/: file_raw_image_repository.py  file_thumbnail_repository.py  file_xmp_repository.py  json_cluster_repository.py  numpy_embedding_repository.py
src/ui/cli/: main.py
src/ui/cli/commands/: organize_command.py
src/ui/cli/presenters/: console_presenter.py
src/ui/config/: app_config.py
tests/domain/: test_raw_image.py
